--- a/project.json
+++ b/project.json
@@ -5,10 +5,14 @@
     },
 
     "dependencies": {
-        "NETStandard.Library": "1.0.0-rc2-23811"
+        "NETStandard.Library": "1.0.0-rc2-23517"
     },
 
-    "frameworks": {
-        "dnxcore50": { }
-    }
+	"frameworks": {
+		"dnxcore50": { }
+	},
+
+	"commands": {
+		"run": "run"
+	}
 }
